--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
     <meta name="description" content="Web site created using create-react-app"/>
     <title>React Basic App</title>
     
-    <link href="resources/css/bootstrap.css" rel="stylesheet">
-    <link href="resources/css/style.css" rel="stylesheet">
-    <link href="resources/css/lecture.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+    <link href="css/lecture.css" rel="stylesheet">
 
 
   </head>
@@ -18,7 +18,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
-    <script src="resources/js/jquery.js"></script>
-    <script src="resources/js/bootstrap.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="js/bootstrap.js"></script>
   </body>
 </html>
