--- a/public/index.html
+++ b/public/index.html
@@ -8,18 +8,18 @@
     <meta name="description" content="Web site created using create-react-app"/>
     <title>React Basic App</title>
     
-    <link href="http://localhost:3000/css/bootstrap.css" rel="stylesheet">
-    <link href="http://localhost:3000/css/style.css" rel="stylesheet">
-    <link href="http://localhost:3000/css/lecture.css" rel="stylesheet">
-    <link href="http://localhost:3000/css/Course.css" rel="stylesheet">
+    <link href="/css/bootstrap.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
+    <link href="/css/lecture.css" rel="stylesheet">
+    <link href="/css/Course.css" rel="stylesheet">
 
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
-    <script src="http://localhost:3000/js/jquery.js"></script>
-    <script src="http://localhost:3000/js/bootstrap.js"></script>
+    <script src="/js/jquery.js"></script>
+    <script src="/js/bootstrap.js"></script>
     
   </body>
 </html>
